[project]
name = "trip-planner-graph"
version = "0.1.0"
description = "Trip Planner"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.25",
    "langchain-community>=0.3.23",
    "langchain-google-genai>=2.1.4",
    "langchain-groq>=0.3.2",
    "langgraph>=0.4.1",
    "python-dotenv>=1.1.0",
    "serpapi>=0.1.5",
    "streamlit>=1.45.0",
]
